# carbonmail

./: .gitignore  README.md  config.json  pyproject.toml
carbonmail/: __main__.py
carbonmail/carbon/: manager.py
carbonmail/database/: connector copy.py  connector.py  initialize.py  manager.py  operations.py
carbonmail/email_sender/: __init__.py  manager.py  view copy.py  view.py
carbonmail/list_editor/: __init__.py  manager.py  view.py
carbonmail/utils/: __init__.py
codigos/: asterisco11.py
database/: contacts.db
tests/: test_carbonmail.py
